test/corpus/auto_assignments.txt
==================
(1) s_2 = 44 [auto assignments]
==================
s_2 = 44
---

(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (integer_literal))
      right: (integer_literal))))


==================
(2) x#3 = "foo" [auto assignments]
==================
x#3 = "foo"
---

(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (integer_literal))
      right: (string_literal))))


==================
(3) x.y = z [auto assignments]
==================
x.y = z
---

(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      right: (symbol))))


==================
(4) String * String = peek [auto assignments]
==================
String * String = peek
---

(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      right: (symbol))))


==================
(5) - String = peek [auto assignments]
==================
- String = peek
---

(source_file
  (cell
    (binary_expression
      left: (prefix_expression
        operand: (symbol))
      right: (symbol))))


==================
(6) s_2 := 44 [auto assignments]
==================
s_2 := 44
---

(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (integer_literal))
      right: (integer_literal))))


==================
(7) f = opts >> o -> x [auto assignments]
==================
f = opts >> o -> x
---

(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (lambda_expression
          parameters: (symbol)
          body: (symbol))))))


==================
(8) ZZ ZZ := ZZ => f [auto assignments]
==================
ZZ ZZ := ZZ => f
---

(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      right: (binary_expression
        left: (symbol)
        right: (symbol)))))
