test/corpus/auto_cobinding.txt
==================
(1) symbol x [auto cobinding]
==================
symbol x
---

(source_file
  (cell
    (quote_expression
      symbol: (symbol))))


==================
(2) local x [auto cobinding]
==================
local x
---

(source_file
  (cell
    (quote_expression
      symbol: (symbol))))


==================
(3) global x [auto cobinding]
==================
global x
---

(source_file
  (cell
    (quote_expression
      symbol: (symbol))))


==================
(4) threadLocal x [auto cobinding]
==================
threadLocal x
---

(source_file
  (cell
    (quote_expression
      symbol: (symbol))))


==================
(5) threadVariable x [auto cobinding]
==================
threadVariable x
---

(source_file
  (cell
    (quote_expression
      symbol: (symbol))))


==================
(6) symbol not [auto cobinding]
==================
symbol not
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(7) symbol symbol [auto cobinding]
==================
symbol symbol
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(8) symbol( [auto cobinding]
==================
symbol(
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(9) symbol(*) [auto cobinding]
==================
symbol(*)
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(10) symbol+ [auto cobinding]
==================
symbol+
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(11) symbol, [auto cobinding]
==================
symbol,
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(12) symbol; [auto cobinding]
==================
symbol;
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(13) symbol. [auto cobinding]
==================
symbol.
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(14) symbol.. [auto cobinding]
==================
symbol..
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(15) symbol..<<<<<2 [auto cobinding]
==================
symbol..<<<<<2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (prefix_expression
        operand: (integer_literal)))))


==================
(16) symbol..<<<<2 [auto cobinding]
==================
symbol..<<<<2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (prefix_expression
        operand: (integer_literal)))))


==================
(17) symbol..2 [auto cobinding]
==================
symbol..2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (integer_literal))))


==================
(18) symbol...2 [auto cobinding]
==================
symbol...2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (float_literal))))


==================
(19) symbol....2 [auto cobinding]
==================
symbol....2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (integer_literal))))


==================
(20) symbol.....2 [auto cobinding]
==================
symbol.....2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (float_literal))))


==================
(21) symbol symbol symbol symbol [auto cobinding]
==================
symbol symbol symbol symbol
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (quote_expression
        symbol: (keyword)))))


==================
(22) f symbol x [auto cobinding]
==================
f symbol x
---

(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (quote_expression
        symbol: (symbol)))))


==================
(23) f symbol x y [auto cobinding]
==================
f symbol x y
---

(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (quote_expression
          symbol: (symbol))
        right: (symbol)))))


==================
(24) f g symbol x [auto cobinding]
==================
f g symbol x
---

(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (quote_expression
          symbol: (symbol))))))


==================
(25) symbol x y [auto cobinding]
==================
symbol x y
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (symbol))
      right: (symbol))))


==================
(26) symbol symbol x [auto cobinding]
==================
symbol symbol x
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(27) toString symbol x [auto cobinding]
==================
toString symbol x
---

(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (quote_expression
        symbol: (symbol)))))


==================
(28) symbol ======<===x [auto cobinding]
==================
symbol ======<===x
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (prefix_expression
        operand: (symbol)))))


==================
(29) symbol ===<===x [auto cobinding]
==================
symbol ===<===x
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(30) symbol.x [auto cobinding]
==================
symbol.x
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(31) symbol..x [auto cobinding]
==================
symbol..x
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(32) symbol...x [auto cobinding]
==================
symbol...x
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(33) symbol....x [auto cobinding]
==================
symbol....x
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(34) symbol..<====y [auto cobinding]
==================
symbol..<====y
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(35) symbol..<===y [auto cobinding]
==================
symbol..<===y
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(36) symbol..<=y [auto cobinding]
==================
symbol..<=y
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(37) symbol..<y [auto cobinding]
==================
symbol..<y
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(38) symbol.<==y [auto cobinding]
==================
symbol.<==y
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (symbol))))


==================
(39) symbol s_1 [auto cobinding]
==================
symbol s_1
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (symbol))
      right: (integer_literal))))


==================
(40) symbol s_1_1 [auto cobinding]
==================
symbol s_1_1
---

(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (quote_expression
          symbol: (symbol))
        right: (integer_literal))
      right: (integer_literal))))


==================
(41) symbol s.a [auto cobinding]
==================
symbol s.a
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (symbol))
      right: (symbol))))


==================
(42) symbol s_s [auto cobinding]
==================
symbol s_s
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (symbol))
      right: (symbol))))


==================
(43) symbol//2 [auto cobinding]
==================
symbol//2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (integer_literal))))


==================
(44) symbol/2 [auto cobinding]
==================
symbol/2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (integer_literal))))


==================
(45) symbol(2 [auto cobinding]
==================
symbol(2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (integer_literal))))


==================
(46) symbol (2 [auto cobinding]
==================
symbol (2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (integer_literal))))


==================
(47) symbol (*) [auto cobinding]
==================
symbol (*)
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(48) symbolsymbol [auto cobinding]
==================
symbolsymbol
---

(source_file
  (cell
    (symbol)))


==================
(49) symbol..2 [auto cobinding]
==================
symbol..2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (integer_literal))))


==================
(50) symbol. 2 [auto cobinding]
==================
symbol. 2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (integer_literal))))


==================
(51) symbol. .2 [auto cobinding]
==================
symbol. .2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (float_literal))))


==================
(52) symbol . . 2 [auto cobinding]
==================
symbol . . 2
---

(source_file
  (cell
    (binary_expression
      left: (quote_expression
        symbol: (keyword))
      right: (integer_literal))))


==================
(53) symbol; [auto cobinding]
==================
symbol;
---

(source_file
  (cell
    (quote_expression
      symbol: (keyword))))


==================
(54) symbol;; [auto cobinding]
==================
symbol;;
---

(source_file
  (cell
    (muted
      (quote_expression
        symbol: (keyword)))))
