test/corpus/auto_generated_assignments.txt
==================
(1) s_2 = 44 [auto_generated_assignments]
==================
s_2 = 44
---
(source_file
  (cell
    (assignment_expression
      left: (binary_expression
        left: (symbol)
        right: (integer_literal))
      right: (integer_literal))))

==================
(2) x#3 = "foo" [auto_generated_assignments]
==================
x#3 = "foo"
---
(source_file
  (cell
    (assignment_expression
      left: (binary_expression
        left: (symbol)
        right: (integer_literal))
      right: (string_literal))))

==================
(3) x.y = z [auto_generated_assignments]
==================
x.y = z
---
(source_file
  (cell
    (assignment_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      right: (symbol))))

==================
(4) String * String = peek [auto_generated_assignments]
==================
String * String = peek
---
(source_file
  (cell
    (assignment_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      right: (symbol))))

==================
(5) - String = peek [auto_generated_assignments]
==================
- String = peek
---
(source_file
  (cell
    (assignment_expression
      left: (prefix_expression
        operand: (symbol))
      right: (symbol))))

==================
(6) String ~ = peek [auto_generated_assignments]
==================
String ~ = peek
---
(source_file
  (cell
    (assignment_expression
      left: (postfix_expression
        operand: (symbol))
      right: (symbol))))

==================
(7) s_2 := 44 [auto_generated_assignments]
==================
s_2 := 44
---
(source_file
  (cell
    (assignment_expression
      left: (binary_expression
        left: (symbol)
        right: (integer_literal))
      right: (integer_literal))))

